[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "adi-doctools"
description = "ADI's sphinx extensions and theme"
readme = "README.md"
authors = [
    {name = "Jorge Marques", email="jorge.marques@analog.com"}
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: reStructuredText",
]
dependencies = [
    "docutils",
    "sphinx",
    "lxml",
    "click",
    "pygments >= 2.7",
    "PyYAML",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.optional-dependencies]

cli = [
    "selenium",
    "weasyprint",
]

test = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = [""]
include = ["adi_doctools*"]
namespaces = true

[project.entry-points."sphinx.html_themes"]
cosmic = 'adi_doctools'
harmonic = 'adi_doctools'

[project.scripts]
adoc = "adi_doctools.cli:entry_point"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
